# QManager-RM520N

./: .gitattributes  .gitignore  CLAUDE.md  DEVELOPMENT_LOG.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_DRAFT_v0.1.3.md  build-discord-bot.sh  build.sh  next.config.ts  package.json  qmanager-installer.sh
.claude/: settings.json  settings.local.json
components/: app-sidebar.tsx  donate-dialog.tsx
constants/: imei-presets.ts
discord-bot/: cache.go  cache_test.go  commands.go  config.go  config_test.go  dm_channel.go  dm_channel_test.go  embeds.go  embeds_test.go  go.mod  go.sum  handlers.go  handlers_test.go  main.go  notify.go  notify_test.go  session.go
docs/: API-REFERENCE.md  ARCHITECTURE.md  BACKEND.md  DESIGN-SYSTEM.md  FRONTEND.md  cfun-0-fix-analysis.md  rm520n-gl-architecture.md  rm520n-sysfs-fetch-sources.md
documentations/: CUSTOM_SIM_PROFILE_ARCHITECTURE.md  DEVELOPMENT_LOG.md  TASKS.md
hooks/: use-connection-scenarios.ts  use-data-used.ts  use-discord-bot.ts  use-modem-subsys.ts  use-ping-profile.ts  use-quality-thresholds.ts  use-sim-profiles.ts  use-software-update.ts  use-system-health-check.ts  use-tailscale.ts  use-tower-locking.ts  use-traffic-stream.ts  use-web-console.ts
lib/: motion-presets.ts
ping-daemon/: Cargo.toml  README.md  build-ping-daemon.sh
ping-daemon/src/: cache.rs  carrier.rs  config.rs  history.rs  main.rs  pid.rs  probe.rs  qlog.rs  reload.rs  state.rs  tls_dial.rs  url.rs
scripts/: install_rm520n.sh  uninstall_rm520n.sh
types/: connection-scenario.ts  discord-bot.ts  modem-status.ts  modem-subsys.ts  (+1 more)
(+132 files in other folders)
