[package]
name = "qmanager-ping"
version = "0.1.0"
edition = "2021"
description = "QManager unified ping daemon — HTTP/204 connectivity probe with keep-alive"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "qmanager_ping"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
signal-hook = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
